# risk-extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  compose.yaml  docker-compose.yaml  pyproject.toml  utils.py
data/: sample3_shiftjis.csv  sample3_utf8.csv
