[tool.poetry]
name = "risk-extractor"
version = "0.1.0"
description = ""
authors = ["yuka-otsuki"]
readme = "README.md"
# packages = [{include = "risk_extractor"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
transformers = "^4.30.2"
scikit-learn = "^1.3.0"
pytorch-lightning = "^2.0.5"
requests = "^2.31.0"
sentencepiece = "^0.1.99"
streamlit = "^1.27.0"
mojimoji = "^0.0.12"
streamlit-ext = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
