[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-extractor"
version = "0.1.0"
description = ""
authors = [{ name = "yuka-otsuki" }]
requires-python = "~=3.11"
dependencies = [
    "pandas>=2.0.3,<3",
    "transformers>=4.30.2,<5",
    "scikit-learn>=1.3.0,<2",
    "pytorch-lightning>=2.0.5,<3",
    "requests>=2.31.0,<3",
    "streamlit>=1.27.0,<2",
    "streamlit-ext>=0.1.8,<0.2",
    "mojimoji>=0.0.13",
    "sentencepiece>=0.2.0",
]

[tool.hatch.build.targets.wheel]
include = ["*.py"]
